--- a/WebSites/WebSite2/Web.config
+++ b/WebSites/WebSite2/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,7 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite2-20161011202927;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebSite2-20161011202927.mdf" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite2-20161011202927;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebSite2-20161011202927.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="Gaming PCConnectionString" connectionString="Data Source=LIGHT;Initial Catalog=&quot;Gaming PC&quot;;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="Gaming PCConnectionString2" connectionString="Data Source=.;Initial Catalog=&quot;Gaming PC&quot;;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.0" />
