--- a/WebSites/WebSite2/Web.config
+++ b/WebSites/WebSite2/Web.config
@@ -9,12 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite2-20161011202927;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebSite2-20161011202927.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="Gaming PCConnectionString" connectionString="Data Source=LIGHT;Initial Catalog=&quot;Gaming PC&quot;;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="Gaming PCConnectionString2" connectionString="Data Source=.;Initial Catalog=&quot;Gaming PC&quot;;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+      <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebSite2-20161011202927;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebSite2-20161011202927.mdf"
+          providerName="System.Data.SqlClient" />
+      <add name="Gaming PCConnectionString" connectionString="Data Source=LIGHT;Initial Catalog=&quot;Gaming PC&quot;;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
+      <add name="Gaming PCConnectionString2" connectionString="Data Source=.;Initial Catalog=&quot;Gaming PC&quot;;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
+      <add name="ConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=&quot;|DataDirectory|\Gaming PC.mdf&quot;;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.0" />
